# iir_filters

./: CONTRIBUTING.md  Cargo.toml  README.md  doc.sh
src/: cplxreal.rs  errors.rs  filter.rs  filter_design.rs  lib.rs  sos.rs  test_util.rs  util.rs  zpk2tf.rs
src/macros/: assert_approx_eq.rs  cplx.rs  mod.rs  util.rs
test_data/: bridge-strain-0-left-s-0-short.txt  test_filter_butter_band_pass_expected.txt  test_filter_butter_band_stop_expected.txt  test_filter_butter_high_pass_expected.txt  test_filter_butter_low_pass_expected.txt
